--- a/tracker_spring/pom.xml
+++ b/tracker_spring/pom.xml
@@ -215,6 +215,13 @@
 			<version>2.3.1</version>
 		</dependency>
 		
+		<!-- jackson을 쓰기 위한  -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.6.0</version>
+		</dependency>
+		
 	</dependencies>
 	
 	<repositories>
